[gd_scene load_steps=6 format=3 uid="uid://d06m06mq1io2n"]

[ext_resource type="Script" path="res://card_game/playing_field/deck/deck.gd" id="1_73yum"]
[ext_resource type="Texture2D" uid="uid://6sylej30a0ts" path="res://card_game/playing_field/deck/deck.png" id="1_f2fvy"]
[ext_resource type="PackedScene" uid="uid://h5g8x0023oq0" path="res://card_game/playing_field/card_container/card_container.tscn" id="2_w0w5c"]
[ext_resource type="Theme" uid="uid://bqxbmpg0ub86d" path="res://global_theme.tres" id="4_hfuib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3r5t8"]
size = Vector2(76, 101)

[node name="Deck" type="Node2D"]
script = ExtResource("1_73yum")

[node name="CardContainer" parent="." instance=ExtResource("2_w0w5c")]

[node name="DisplayNode" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="DisplayNode"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_f2fvy")
hframes = 4
frame = 3

[node name="QuantityLabel" type="Label" parent="."]
z_index = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_top = 15.0
offset_right = 6.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme = ExtResource("4_hfuib")
theme_type_variation = &"OverlayLabel"
text = "0"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3r5t8")

[connection signal="cards_modified" from="CardContainer" to="." method="_on_card_container_cards_modified"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
